--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,4 +1,5 @@
 @use 'variables' as v;
+@use 'sass:color';
 /** Media Queries **/
 @mixin telefono {
     @media (min-width: #{v.$telefono}) {
@@ -17,7 +18,7 @@
         @content;
     }
 }
-@mixin grid($columnas, $espaciado ) {
+@mixin grid($columnas, $espaciado) {
     display: grid;
     gap: $espaciado;
     grid-template-columns: repeat($columnas, 1fr);
@@ -29,11 +30,17 @@
     margin: 0 auto;
 }
 
-@mixin boton {
+@mixin boton($color, $display) {
     padding: 1rem;
     font-size: 2rem;
-    background-color: v.$amarillo;
+    background-color: $color;
     color: v.$blanco;
     text-align: center;
-    display: block;
+    display: $display;
+}
+
+@mixin hoverOscuro($color) {
+    &:hover {
+        background-color: color.adjust($color, $lightness: -5%);
+    }
 }
