--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -42,5 +42,6 @@
 @mixin hoverOscuro($color) {
     &:hover {
         background-color: color.adjust($color, $lightness: -5%);
+        cursor: pointer;
     }
 }
