--- a/src/scss/layout/_anuncios.scss
+++ b/src/scss/layout/_anuncios.scss
@@ -26,6 +26,7 @@
             margin: 0;
         }
         p {
+            text-align: center;
             margin: 1rem;
         }
         .precio {
@@ -33,6 +34,12 @@
             color: v.$verde;
             font-size: 4rem;
             font-weight: v.$bold;
+        }
+
+        @include m.tablet {
+            p {
+                text-align: left;
+            }
         }
     }
 }
@@ -44,6 +51,8 @@
     display: flex;
     justify-content: space-between;
     gap: 3rem;
+
+    max-width: 40rem;
 
     .icono {
         display: flex;
@@ -77,6 +86,7 @@
 .boton-verMas {
     @include m.boton(v.$verde, block);
     padding: 1rem 3rem;
+    border: none;
 
     @include m.tablet {
         display: inline-block;
