--- a/src/scss/layout/_nosotros.scss
+++ b/src/scss/layout/_nosotros.scss
@@ -7,9 +7,7 @@
     gap: 2rem;
     
     @include m.tablet {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        column-gap: 3rem;
+        @include m.grid(3, 3rem)
     }
 }
 
